[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://visuals/Lato-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/visual_things.gd" type="Script" id=3]

[sub_resource type="Environment" id=1]
background_mode = 4
adjustment_enabled = true

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[node name="VisualThings" type="Node2D"]
script = ExtResource( 3 )

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 505, 182 )
texture = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -207.0
margin_top = -151.0
margin_right = 207.0
margin_bottom = -26.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 458.0
margin_bottom = 39.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_right = 175.0
margin_bottom = 39.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 179.0
margin_right = 379.0
margin_bottom = 39.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.1
max_value = 8.0
step = 0.01
value = 1.0

[node name="Brightness" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 383.0
margin_right = 458.0
margin_bottom = 39.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "1.0"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 43.0
margin_right = 458.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
margin_right = 175.0
margin_bottom = 39.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Contrast"

[node name="ContrastSlider" type="HSlider" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
margin_left = 179.0
margin_right = 379.0
margin_bottom = 39.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.1
max_value = 8.0
step = 0.01
value = 1.0

[node name="Contrast" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
margin_left = 383.0
margin_right = 458.0
margin_bottom = 39.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "1.0"
align = 1
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 86.0
margin_right = 458.0
margin_bottom = 125.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3"]
margin_right = 175.0
margin_bottom = 39.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Saturation"

[node name="SaturationSlider" type="HSlider" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3"]
margin_left = 179.0
margin_right = 379.0
margin_bottom = 39.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.1
max_value = 8.0
step = 0.01
value = 1.0

[node name="Saturation" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer3"]
margin_left = 383.0
margin_right = 458.0
margin_bottom = 39.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "1.0"
align = 1
valign = 1

[connection signal="value_changed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/BrightnessSlider" to="." method="_on_BrightnessSlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ContrastSlider" to="." method="_on_ContrastSlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer3/SaturationSlider" to="." method="_on_SaturationSlider_value_changed"]
